# xsts-semantics

./: .cruft.json  .dockerignore  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
examples/xsts/: debug.xsts  decl-only.xsts  enumequals.xsts  example.xsts  incr.xsts  min.xsts  running-example.xsts
examples/xsts/specs/: xsts-theta-spec.json  xsts-theta-spec.k
examples/xsts/theta/: bhmr2007.xsts  bool.xsts  choices.xsts  count_up_down.xsts
kompiled/: allRules.txt  compiled.txt  configVars.sh  definition.kore  mainModule.txt  mainSyntaxModule.txt  parsed.txt  scanner  syntaxDefinition.kore
package/: Dockerfile  smoke-test.sh
src/kxsts/: __init__.py  __main__.py  kxsts.py
src/kxsts/kdist/: plugin.py
src/kxsts/kdist/kxsts-semantics/: xsts-verification.json  xsts-verification.k  xsts.k
